[package]
name = "force-graph-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.68"
bytemuck = { version="1.12.3", features=["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.14.2"
winit = "0.27.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wgpu = { version="0.14.2", features=["webgl"]}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version="0.3.60", features = [
    "Document",
    "Window",
    "Element",
]}

